# fruitwork

./: .gitignore  CLion code style.xml  CMakeLists.txt  Makefile  README.md  metadata.rc
include/: AnimatedSprite.h  Button.h  Circle.h  Component.h  ConfettiCannon.h  Constants.h  CoveringSprite.h  DebugInfo.h  ExitScene.h  ImageButton.h  InputField.h  Label.h  PhysicsBody.h  Rectangle.h  ResourceManager.h  ResponsiveSprite.h  Scene.h  Session.h  Shape.h  Sprite.h  System.h  TestScene.h  TestSceneCollision.h  TestSceneConfetti.h  TestSceneHierarchy.h  TestSceneIndex.h  TestScenePhysics.h
src/: AnimatedSprite.cpp  Button.cpp  Circle.cpp  Component.cpp  ConfettiCannon.cpp  CoveringSprite.cpp  DebugInfo.cpp  ExitScene.cpp  ImageButton.cpp  ImageButton.h  InputField.cpp  Label.cpp  Main.cpp  PhysicsBody.cpp  Rectangle.cpp  ResourceManager.cpp  ResponsiveSprite.cpp  Scene.cpp  Session.cpp  Shape.cpp  Sprite.cpp  System.cpp  System.h  TestScene.cpp  TestSceneCollision.cpp  TestSceneConfetti.cpp  TestSceneHierarchy.cpp  TestSceneIndex.cpp  TestScenePhysics.cpp  main.cpp
